package org.nunocky.loginformsample

// Compose Tags used in Application and Tests

const val TAG_USERNAME = "Username"
const val TAG_PASSWORD = "Password"
const val TAG_BTN_LOGIN = "ButtonLogin"
const val TAG_TEXT_MESAGE = "Message"
const val TAG_TEXT_MESAGE_LOADING = "Message_Loading"
const val TAG_TEXT_MESAGE_SUCCESS = "Message_Success"
const val TAG_TEXT_MESAGE_ERROR = "Message_Error"
